<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/accent_material_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:id="@+id/txt2"
        android:textSize="20sp"
        android:textColor="#111111"
        android:layout_below="@+id/txt1"
        android:layout_alignRight="@+id/txt1"
        android:layout_alignEnd="@+id/txt1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:id="@+id/txt1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#111111"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador"
        android:id="@+id/btnjugador"
        android:layout_below="@+id/txt2"
        android:layout_marginTop="63dp"
        android:layout_alignRight="@+id/txt1"
        android:layout_alignEnd="@+id/txt1"
        android:layout_alignLeft="@+id/txt1"
        android:layout_alignStart="@+id/txt1"
        android:background="#111111"
        android:textColor="@color/bright_foreground_material_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugar"
        android:id="@+id/btnplay"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/btnjugador"
        android:layout_alignLeft="@+id/btnjugador"
        android:layout_alignStart="@+id/btnjugador"
        android:layout_alignRight="@+id/txt2"
        android:layout_alignEnd="@+id/txt2"
        android:background="#111111"
        android:textColor="@color/bright_foreground_material_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntajs"
        android:id="@+id/btnpuntajs"
        android:layout_below="@+id/btnplay"
        android:layout_marginTop="32dp"
        android:layout_alignLeft="@+id/btnplay"
        android:layout_alignStart="@+id/btnplay"
        android:layout_alignRight="@+id/txt2"
        android:layout_alignEnd="@+id/txt2"
        android:background="#111111"
        android:textColor="@color/bright_foreground_material_dark"/>

</RelativeLayout>
