<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.toshiba.pierdapt.Jugador"
    android:background="@color/accent_material_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrincante"
        android:id="@+id/txt1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#111111"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombju"
        android:id="@+id/txt2"
        android:layout_marginTop="96dp"
        android:textSize="20sp"
        android:textColor="#111111"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editxt1"
        android:layout_below="@+id/txt2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:background="@color/switch_thumb_normal_material_dark"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnaceptar"
        android:id="@+id/btnaceptar"
        android:layout_marginBottom="92dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editxt1"
        android:layout_alignEnd="@+id/editxt1"
        android:layout_toRightOf="@+id/txt2"
        android:layout_toEndOf="@+id/txt2"
        android:background="#111111"
        android:textColor="@color/bright_foreground_material_dark"/>
</RelativeLayout>
