<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/accent_material_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloplay"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntos"
            android:id="@+id/textView2"
            android:textSize="17sp"
            android:textColor="#111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtpuntos"
            android:textColor="#111111"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="108dp"
                android:layout_height="60dp"
                android:text="@string/btnfin"
                android:id="@+id/btnfin"
                android:layout_gravity="right"
                android:background="#111111"
                android:textColor="@color/bright_foreground_material_dark"/>
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/cpu"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp">

        <Button
            android:id="@+id/btncpu"
            android:layout_width="87dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|top"
            android:background="#111111"
            android:text="@string/btncpu"
            android:textColor="@color/bright_foreground_material_dark" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/frameLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VS"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal|top"
            android:textSize="17sp"
            android:textColor="@android:color/black" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout3"
        android:layout_marginTop="31dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/txtjugador"
            android:layout_gravity="center_horizontal|top"
            android:textSize="20sp"
            android:textColor="#111111"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/frameLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btnpiedra"
            android:layout_width="93dp"
            android:layout_height="60dp"
            android:layout_gravity="left|top"
            android:background="#111111"
            android:text="Piedra"
            android:textColor="@color/bright_foreground_material_dark"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnpapel"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|top"
            android:background="#111111"
            android:text="Papel"
            android:textColor="@color/bright_foreground_material_dark"
            android:visibility="visible" />

        <Button
            android:id="@+id/btntijera"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_gravity="right|top"
            android:background="#111111"
            android:text="Tijera"
            android:textColor="@color/bright_foreground_material_dark" />

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganados"
            android:textColor="#111111" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtganes"
            android:layout_weight="0.20"
            android:textColor="#111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perdidos"
            android:id="@+id/textView7"
            android:textColor="#111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtperdidos"
            android:nestedScrollingEnabled="false"
            android:layout_weight="0.11"
            android:textColor="#111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empatados"
            android:id="@+id/textView8"
            android:textColor="#111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtempates"
            android:textColor="#111111"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout5"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_above="@+id/linearLayout2">

        <Button
            android:id="@+id/btnnuevo"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal|top"
            android:background="#111111"
            android:text="Nuevo"
            android:textColor="@color/bright_foreground_material_dark" />
    </FrameLayout>

</RelativeLayout>
